--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<ul class="links">
 					<li><a href="index.html">Principal</a></li>
 					<li><a href="https://www.mediafire.com/#myfiles">Beta</a></li>
-					<li><a href="Samsung.html.html">samsung</a></li>
+					<li><a href="Samsung.html">samsung</a></li>
 				</ul>
 			</nav>
 
