--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 										<h2>Para mas informacion</h2>
 									</header>
 									<footer class="align-center">
-										<a href="#" class="button alt">¡Click aqui!</a>
+										<a href="informacion.html" class="button alt">¡Click aqui!</a>
 									</footer>
 								</div>
 							</div>
