--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Principal</a></li>
-					<li><a href="https://www.mediafire.com/#myfiles">Beta</a></li>
+					<li><a href="zona de descarga.html">Beta</a></li>
 					<li><a href="Samsung.html">samsung</a></li>
 				</ul>
 			</nav>
