--- a/informacion.html
+++ b/informacion.html
@@ -23,7 +23,7 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Principal</a></li>
-					<li><a href="">Beta</a></li>
+					<li><a href="zona de descarga.html">Descarga</a></li>
 					<li><a href="Samsung.html">Samsung</a></li>
 				</ul>
 			</nav>
