--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 </div>
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><span class="badge badge-primary"><font color="black"><font size="5">Jugando y Aprendiendo</font> <span> </span></a></div>
-				 <a href="#menu"><font color="white"><font size="5">Menu</font></a>
+				<div class="logo"><span class="badge badge-primary">Jugando y Aprendiendo</font> <span> </span></a></div>
+				 <a href="#menu">Menu</font></a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Principal</a></li>
-					<li><a href="https://www.mediafire.com/#myfiles">Beta</a></li>
+					<li><a href="zona de descarga.html">Descarga</a></li>
 					<li><a href="Samsung.html">samsung</a></li>
 				</ul>
 			</nav>
@@ -194,7 +194,7 @@
 					&copy; Todos los derechos reservados.
 				</div>
 			</footer>
-			<a class="appWhatsapp" target="_blank" href="https://api.whatsapp.com/send?phone=573015262740&text=Bienvenidos!%20en%20que%20te%20podemos%20ayudar"><img src="images/whatsapp.png" hwight></a>	
+			<a class="appWhatsapp" target="_blank" href="https://api.whatsapp.com/send?phone=573005006185&text=Bienvenidos!%20en%20que%20te%20podemos%20ayudar"><img src="images/whatsapp.png" hwight></a>	
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
