--- a/informacion.html
+++ b/informacion.html
@@ -10,6 +10,20 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			.appWhatsapp {
+				position: fixed;
+				left: 15px;
+				bottom: 20px;
+				width: 65px;
+				z-index: 1000;
+			}
+	
+			.appWhatsapp img{
+				width: 100%;
+				height: auto;
+			}
+		</style>
 	</head>
 	<body class="subpage">
 
@@ -66,6 +80,7 @@
 					&copy; Todos los derechos reservados.
 				</div>
 			</footer>
+		  <a class="appWhatsapp" target="_blank" href="https://api.whatsapp.com/send?phone=573005006185&text=Bienvenidos!%20en%20que%20te%20podemos%20ayudar"><img src="images/whatsapp.png" hwight></a>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
