--- a/Samsung.html
+++ b/Samsung.html
@@ -5,7 +5,21 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<link rel="stylesheet" href="css/bootstrap.css">
-		<title>Samsung</title>			
+		<title>Samsung</title>	
+		<style>
+			.appWhatsapp {
+				position: fixed;
+				left: 15px;
+				bottom: 20px;
+				width: 65px;
+				z-index: 1000;
+			}
+	
+			.appWhatsapp img{
+				width: 100%;
+				height: auto;
+			}
+		</style>
 	</head>
 	
 	<body>	
@@ -115,6 +129,7 @@
 				</div>
 				
 			</div>
+	<a class="appWhatsapp" target="_blank" href="https://api.whatsapp.com/send?phone=573005006185&text=Bienvenidos!%20en%20que%20te%20podemos%20ayudar"><img src="images/whatsapp.png" hwight></a>
 			
 		<script src="js/jquery-3.2.1.min.js"></script>
 		<script src="js/popper.min.js"></script>
