--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-					<li><a href="https://twitter.com/Jugandoyaprend1" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/Jugando-y-Aprendiendo-108589204228182/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/jugandoyaprendiendo5/?hl=es-la" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://twitter.com/Jugandoyaprend1" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/Jugando-y-Aprendiendo-108589204228182/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/jugandoyaprendiendo5/?hl=es-la" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
