--- a/zona de descarga.html
+++ b/zona de descarga.html
@@ -122,9 +122,9 @@
 									<p>Somos estudiantes de la institucion educativa Manuel J Betancur, estamso en el grado decimo y actualmentes somos estudiantes de media tecnica. esta pagina web va dirigida a nuestro proyecto formativo y la informacion presentada en ella es parte de nuestras ideas y trabajo</p>
 									<h3>Apoyanos</h3>
 									<ul class="icons">
-										<li><a href="https://twitter.com/Jugandoyaprend1" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="https://www.facebook.com/Jugando-y-Aprendiendo-108589204228182/"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href=https://www.instagram.com/jugandoyaprendiendo5/?hl=es-la class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://twitter.com/Jugandoyaprend1" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://www.facebook.com/Jugando-y-Aprendiendo-108589204228182/" target="_blank"  class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.instagram.com/jugandoyaprendiendo5/?hl=es-la" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
 								</div>
 
